# privacy-index

./: LICENSE  README.md  build_appimage.sh  privacy-index  pyproject.toml
privacy_index/: __main__.py  browser_tests.py  main.py
privacy_index/core/: i18n.py  models.py  report.py  scoring.py  utils.py
privacy_index/data/: dns_providers.json
privacy_index/scanners/: apps.py  browsers.py  disk.py  firewall.py  network.py  system.py
